src/objects/BMCServiceDesk__SRM_RequestDetailInputs__c.object
<CustomObject>
    <description>Stores the input questions and the responses that a user has provided to fulfill the service request.</description>
    <fields>
        <fullName>BMCServiceDesk__FKFulfillmentInputs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fulfillment Inputs</label>
        <referenceTo>BMCServiceDesk__SRM_FulfillmentInputs__c</referenceTo>
        <relationshipLabel>Request Detail Inputs</relationshipLabel>
        <relationshipName>Request_Detail_Inputs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKRequestDetail__c</fullName>
        <label>Request Detail</label>
        <referenceTo>BMCServiceDesk__SRM_RequestDetail__c</referenceTo>
        <relationshipLabel>Request Detail Inputs</relationshipLabel>
        <relationshipName>Request_Detail_Inputs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Input__c</fullName>
        <label>Input / Prompt</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NewResponse__c</fullName>
        <description>Stores the new input response when this record is edited</description>
        <label>NewResponse</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Richtext_Response__c</fullName>
        <description>Stores the content of Text Area (Rich) response type</description>
        <label>Richtext Response</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__StoredValue__c</fullName>
        <label>Stored Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Request Detail Inputs</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Request Detail Input #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Detail Inputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>